# ChangeLog for www-apache/passenger
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/www-apache/cvs-repo/gentoo-x86/www-apache/passenger/ChangeLog,v 1.33 2011/02/23 20:15:49 graaff Exp $

  23 Feb 2011; Hans de Graaff <graaff@gentoo.org> passenger-3.0.2.ebuild:
  Request support for source highlighting in documentation building, fixing
  bug 344289.

  23 Feb 2011; Hans de Graaff <graaff@gentoo.org> -passenger-3.0.0.ebuild,
  -passenger-3.0.0-r1.ebuild:
  Remove old versions.

*passenger-3.0.2 (08 Jan 2011)

  08 Jan 2011; Hans de Graaff <graaff@gentoo.org> +passenger-3.0.2.ebuild:
  Version bump. Fixes bug 345593.

  09 Nov 2010; Markus Meier <maekke@gentoo.org> passenger-2.2.15.ebuild:
  amd64/x86 stable, bug #344239

*passenger-3.0.0-r1 (07 Nov 2010)

  07 Nov 2010; Hans de Graaff <graaff@gentoo.org>
  +passenger-3.0.0-r1.ebuild, +files/passenger-3.0.0-ldflags.patch:
  Respect LDFLAGS. Install executables in /usr/lib/exec, not /usr/lib.

*passenger-2.2.15-r1 (06 Nov 2010)

  06 Nov 2010; Hans de Graaff <graaff@gentoo.org>
  +files/2.2.15-gentoo-multilib-strict.patch, +passenger-2.2.15-r1.ebuild:
  Fix installation on multlib-strict systems, thanks to robbat2 for the
  patch in bug 344225.

  04 Nov 2010; Christian Faulhammer <fauli@gentoo.org>
  passenger-3.0.0.ebuild:
  add ~x86, bug 343849

*passenger-3.0.0 (02 Nov 2010)

  02 Nov 2010; Hans de Graaff <graaff@gentoo.org> +passenger-3.0.0.ebuild,
  +files/passenger-3.0.0-gentoo.patch:
  Version bump. Convert to ruby-ng. Dropped ~x86 due to new dependencies,
  bug 343849.

  24 Oct 2010; Hans de Graaff <graaff@gentoo.org> -passenger-2.2.4.ebuild,
  -passenger-2.2.9.ebuild, -passenger-2.2.11.ebuild:
  Remove old versions.

*passenger-2.2.15 (30 Jun 2010)

  30 Jun 2010; Hans de Graaff <graaff@gentoo.org> +passenger-2.2.15.ebuild:
  Version bump.

  03 Apr 2010; Hans de Graaff <graaff@gentoo.org> -passenger-2.2.10.ebuild:
  Remove broken version.
