@@ -8,15 +8,17 @@ AUX passenger-3.0.0-gentoo.patch 1689 RMD160 3a510af572f07a947748c4024251a957fab
 AUX passenger-3.0.0-ldflags.patch 572 RMD160 dbbe8839ad0318ad2730350aa47a622577288ae6 SHA1 6ff3da382026b6fe0c7ff9b179fc21d6c4c5552b SHA256 22b7c85b2c3e0fb2c0275e0a63308cf65aa0ab2a1398c64b95ab149b8cb58392
 DIST passenger-2.2.15.tar.gz 2128473 RMD160 52d0eb505d6c19e45ccc0dac8d1e675aed505c14 SHA1 dbb2f3346061872a43efc554990d8993172c8ff9 SHA256 95a9f61070d268ecaa311539d8e28b348765ca0e1528665ef928fc4b4bcc1436
 DIST passenger-3.0.2.tar.gz 2969570 RMD160 a1ba4b78df9a653dd63bf7c4750f5fa1dd364444 SHA1 784e43eaff861b63e9a4fc09f65f0450142d537e SHA256 a1a665280a6559fe0fa6c92b74ae7e145ee23c30606967919faddb292cf00da8
+DIST passenger-3.0.7.tar.gz 2830376 RMD160 3a22895d72b3f6c9f953e00cb90fe0193494d058 SHA1 f6fd2ff499af9b5ed637505bb3bbe3cc7675b989 SHA256 021972c7f4fecd80042e7fc1d8f19ee3008a5491a3b1d34958b2b7ed42bddc85
 EBUILD passenger-2.2.15-r1.ebuild 1372 RMD160 7b31bf101d0914063e790a710f4945f3ae7794eb SHA1 7b755ee72a6a46fe38ed33c5b3262e64030d1fc7 SHA256 5de33fbcfc3ab8c09f885fa7a15669cc37b942f4df58b55fc831818ad6206a22
 EBUILD passenger-2.2.15.ebuild 1310 RMD160 de65bb9d8c9de2565db681ec0366d6e36189142d SHA1 f3271497fd03e28efbf56640fc7127004fa9e937 SHA256 adfb99efd637dd1f9f6b7d87c751f86de68048349cb602b6a137aecb7794f016
 EBUILD passenger-3.0.2.ebuild 2513 RMD160 9bee7a4e6668af3a2ffc062fd87b6063b0e61e97 SHA1 0abc15c37fb798d313c1262663622d7542a382bb SHA256 c6d5f2bcb77153494f600793dcc1d6a9051deaaa56e2448f1242fb065a0a9fe9
-MISC ChangeLog 6213 RMD160 cae5243bd860ebfc432563b06b65d30eff296962 SHA1 fc10e4d326685add34dc255a55a93abc882fc445 SHA256 d6e9ed84b4a5d9b1a93046a0a51bbbe5915859e729aaea6338dc4aa440b54b47
+EBUILD passenger-3.0.7.ebuild 2475 RMD160 3bd5f42eb7abeca9be0405e064c09210293adf1f SHA1 7800048729ab7631d737f68a86d0648ec860c6d9 SHA256 f7a8e02d9493b515d7f39a768e0a1c27998730562ff768472ce8d57cca805baf
+MISC ChangeLog 6337 RMD160 124f6764ecce59d41f855276a4f9057b21b1ff26 SHA1 47d84c64b231034f5e9670dea16999f66e83c4a4 SHA256 0bdb1477b15df7500bb9480086a3b84a044a320b9a350af2da94e45495cf4b99
 MISC metadata.xml 179 RMD160 046a67d39c9a5784800b120b3da44d67caa1f0af SHA1 31e15b20d55994a9989fff90a20847c1e76db2cb SHA256 d07e5a69f0aaee3b23884e0e414fad4aba70b9f4a115d2649714b8f1bd99d9fe
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk1lavsACgkQrnu0mw69JkpN8AD+NOYrbVRN4ffyGQeqh7dR6cmK
-qdzYd8mrCPBIiYIbHLYA/32y0//v/oPPRDkmJ8yhSIn2Ah95l0stgIhn5zybMFyd
-=qfOU
+iF4EAREIAAYFAk2sfB0ACgkQrnu0mw69JkoEDAEAjVSIByhV69jvUQ0vTeoKiHz7
+G/bVm2nwtdy/cHL2GwwA/30MOeJT3ix7zmUkWgubVD3sHV2tydKB8ZQK4qiX8O15
+=6nQF
 -----END PGP SIGNATURE-----
