@@ -1,6 +1,11 @@
 # ChangeLog for www-apache/passenger
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-apache/cvs-repo/gentoo-x86/www-apache/passenger/ChangeLog,v 1.33 2011/02/23 20:15:49 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-apache/cvs-repo/gentoo-x86/www-apache/passenger/ChangeLog,v 1.34 2011/04/18 17:59:51 graaff Exp $
+
+*passenger-3.0.7 (18 Apr 2011)
+
+  18 Apr 2011; Hans de Graaff <graaff@gentoo.org> +passenger-3.0.7.ebuild:
+  Version bump.
 
   23 Feb 2011; Hans de Graaff <graaff@gentoo.org> passenger-3.0.2.ebuild:
   Request support for source highlighting in documentation building, fixing
